Unifi-Controller/kubernetes/namespaceAndSecret.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: unifi-controller
